eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: birthday-reminders-api-service
spec:
  selector:
    app: birthday-reminders-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
