eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: birthday-reminders-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "api.birthdays.tornvallalexander.com"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: birthday-reminders-api-service
              port:
                number: 80
  tls:
  - hosts:
    - api.birthdays.tornvallalexander.com
    secretName: birthday-reminders-api-cert
